--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             - run: npm install
             - run: echo 'done--'
             - run: git clone git@github.com:cirbuk/kubric-automation-testing.git
+            - run: cd kubric-automation-testing/
             - run: npm install
             - run: npm test
 workflows:
