--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  browser-tools: circleci/browser-tools@1.0.1
 jobs:
   build-and-test:
     executor:
       name: node/default
     steps:
+      - browser-tools/install-chrome
       - checkout
       - node/with-cache:
           steps:
