--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   browser-tools: circleci/browser-tools@1.0.1
+  node: circleci/node@1.1.6
 jobs:
   build-and-test:
     executor:
